# spacy-lookups-data

./: .gitignore  .travis.yml  MANIFEST.in  README.md  azure-pipelines.yml  comparizon.py  lemmatizer_test.json  lemmatizer_test_output.csv  lemmatizer_test_output_theirs.csv  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
spacy_lookups_data/: __init__.py
spacy_lookups_data/data/: bn_source.txt  ca_lemma_exc.json  ca_lemma_index.json  ca_lemma_rules.json  ca_license.txt  cs_lemma_lookup.json  cs_lexeme_norm.json  da_lexeme_norm.json  da_source.txt  de_lexeme_norm.json  de_lexeme_settings.json  de_orth_variants.json  el_lemma_exc.json  el_lemma_index.json  el_lemma_rules.json  el_lexeme_norm.json  el_lexeme_settings.json  en_lemma_exc.json  en_lemma_lookup.json  en_lemma_rules.json  en_lexeme_norm.json  en_lexeme_settings.json  en_orth_variants.json  es_lemma_exc.json  es_lemma_index.json  es_lemma_rules.json  es_lemma_rules_groups.json  es_lexeme_settings.json  fa_source.txt  ga_lemma_lookup_adj.json  ga_lemma_lookup_adp.json  ga_lemma_lookup_noun.json  ga_lemma_lookup_poss.json  ga_lemma_lookup_prep.json  ga_lemma_lookup_verb.json  ga_license.txt  grc_lemma_lookup.json  grc_lexeme_norm.json  hu_lemma_lookup.json  id_lexeme_norm.json  (+36 more)
spacy_lookups_data/tests/: _test_sr.py  conftest.py  test_ca.py  test_cs.py  test_da.py  test_de.py  test_en.py  test_entry_points.py  test_fr.py  test_ga.py  test_grc.py  test_hr.py  test_it.py  test_lb.py  test_lt.py  test_mk.py  test_nl.py  test_ro.py  test_ru.py  test_sr.py  test_sv.py  test_tr.py
