[metadata]
description = Additional lookup tables and data resources for spaCy
url = https://spacy.io
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering

[options]
zip_safe = true
include_package_data = true
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
install_requires =
    setuptools
setup_requires =
    pathlib==1.0.1; python_version < "3.4"

[options.entry_points]
spacy_lookups =
    bn = spacy_lookups_data:bn
    ca = spacy_lookups_data:ca
    da = spacy_lookups_data:da
    de = spacy_lookups_data:de
    de_extra = spacy_lookups_data:de_extra
    el = spacy_lookups_data:el
    el_extra = spacy_lookups_data:el_extra
    en = spacy_lookups_data:en
    en_extra = spacy_lookups_data:en_extra
    es = spacy_lookups_data:es
    es_extra = spacy_lookups_data:es_extra
    fa = spacy_lookups_data:fa
    fr = spacy_lookups_data:fr
    hr = spacy_lookups_data:hr
    hu = spacy_lookups_data:hu
    id = spacy_lookups_data:id_
    it = spacy_lookups_data:it
    lb = spacy_lookups_data:lb
    lt = spacy_lookups_data:lt
    nb = spacy_lookups_data:nb
    nl = spacy_lookups_data:nl
    pl = spacy_lookups_data:pl
    pt = spacy_lookups_data:pt
    ro = spacy_lookups_data:ro
    ru = spacy_lookups_data:ru
    sr = spacy_lookups_data:sr
    sv = spacy_lookups_data:sv
    ta = spacy_lookups_data:ta
    th = spacy_lookups_data:th
    tl = spacy_lookups_data:tl
    tr = spacy_lookups_data:tr
    ur = spacy_lookups_data:ur

    # These are functions that return a dictionary, to be used in Thinc configs
    spacy-lookups-data.bn = spacy_lookups_data:bn_lookups
    spacy-lookups-data.ca = spacy_lookups_data:ca_lookups
    spacy-lookups-data.da = spacy_lookups_data:da_lookups
    spacy-lookups-data.de = spacy_lookups_data:de_lookups
    spacy-lookups-data.el = spacy_lookups_data:el_lookups
    spacy-lookups-data.en = spacy_lookups_data:en_lookups
    spacy-lookups-data.es = spacy_lookups_data:es_lookups
    spacy-lookups-data.fa = spacy_lookups_data:fa_lookups
    spacy-lookups-data.fr = spacy_lookups_data:fr_lookups
    spacy-lookups-data.hr = spacy_lookups_data:hr_lookups
    spacy-lookups-data.hu = spacy_lookups_data:hu_lookups
    spacy-lookups-data.id = spacy_lookups_data:id_lookups
    spacy-lookups-data.it = spacy_lookups_data:it_lookups
    spacy-lookups-data.lb = spacy_lookups_data:lb_lookups
    spacy-lookups-data.lt = spacy_lookups_data:lt_lookups
    spacy-lookups-data.nb = spacy_lookups_data:nb_lookups
    spacy-lookups-data.nl = spacy_lookups_data:nl_lookups
    spacy-lookups-data.pl = spacy_lookups_data:pl_lookups
    spacy-lookups-data.pt = spacy_lookups_data:pt_lookups
    spacy-lookups-data.ro = spacy_lookups_data:ro_lookups
    spacy-lookups-data.sr = spacy_lookups_data:sr_lookups
    spacy-lookups-data.sv = spacy_lookups_data:sv_lookups
    spacy-lookups-data.tl = spacy_lookups_data:tl_lookups
    spacy-lookups-data.tr = spacy_lookups_data:tr_lookups
    spacy-lookups-data.ur = spacy_lookups_data:ur_lookups

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,
