[metadata]
description = Additional lookup tables and data resources for spaCy
url = https://spacy.io
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
install_requires =
    setuptools

[options.entry_points]
spacy_lookups =
    bn = spacy_lookups_data:bn
    ca = spacy_lookups_data:ca
    cs = spacy_lookups_data:cs
    da = spacy_lookups_data:da
    de = spacy_lookups_data:de
    el = spacy_lookups_data:el
    en = spacy_lookups_data:en
    es = spacy_lookups_data:es
    fa = spacy_lookups_data:fa
    fr = spacy_lookups_data:fr
    ga = spacy_lookups_data:ga
    grc = spacy_lookups_data:grc
    hr = spacy_lookups_data:hr
    hu = spacy_lookups_data:hu
    id = spacy_lookups_data:id_
    it = spacy_lookups_data:it
    lb = spacy_lookups_data:lb
    lt = spacy_lookups_data:lt
    mk = spacy_lookups_data:mk
    nb = spacy_lookups_data:nb
    nl = spacy_lookups_data:nl
    pl = spacy_lookups_data:pl
    pt = spacy_lookups_data:pt
    ro = spacy_lookups_data:ro
    ru = spacy_lookups_data:ru
    sr = spacy_lookups_data:sr
    sv = spacy_lookups_data:sv
    ta = spacy_lookups_data:ta
    th = spacy_lookups_data:th
    tl = spacy_lookups_data:tl
    tr = spacy_lookups_data:tr
    ur = spacy_lookups_data:ur

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,
